--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 	<ul>
-		<li><a href="characters">characters</a></li>
-		<li><a href="setting">setting</a></li>
+		<li><a href="characters">characters / variables</a></li>
+		<li><a href="setting">setting / logic </a></li>
+		<li><a href="plot">plot / functions</a></li>
 	</ul>
 </body>
 </html>
