--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<li><a href="characters">characters / variables</a></li>
 		<li><a href="setting">setting / logic </a></li>
 		<li><a href="plot">plot / functions</a></li>
+		<li><a href="loop">loop 1</a></li>
 	</ul>
 </body>
 </html>
