--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<li><a href="setting">setting / logic </a></li>
 		<li><a href="plot">plot / functions</a></li>
 		<li><a href="loop">loop 1</a></li>
+		<li><a href="random">loop 2: random</a></li>
 	</ul>
 </body>
 </html>
