--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<li><a href="plot">plot / functions</a></li>
 		<li><a href="loop">loop 1</a></li>
 		<li><a href="random">loop 2: random</a></li>
+		<li><a href="grid">loop 3: grid</a></li>
+		<li><a href="grid_template">loop 4: grid template</a></li>
 	</ul>
 </body>
 </html>
