--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<li><a href="random">loop 2: random</a></li>
 		<li><a href="grid">loop 3: grid</a></li>
 		<li><a href="grid_template">loop 4: grid template</a></li>
+		<li><a href="save_image">loop 5: grid w save image</a></li>
 	</ul>
 </body>
 </html>
