--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<li><a href="grid">loop 3: grid</a></li>
 		<li><a href="grid_template">loop 4: grid template</a></li>
 		<li><a href="save_image">loop 5: grid w save image</a></li>
+		<li><a href="grid_rotate">loop 6: grid rotate</a></li>
 	</ul>
 </body>
 </html>
