--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<li><a href="save_image">loop 5: grid w save image</a></li>
 		<li><a href="grid_rotate">loop 6: grid rotate</a></li>
 		<li><a href="interface">loop 7: user interface</a></li>
+		<li><a href="array">array 1: cat function</a></li>
 	</ul>
 </body>
 </html>
