adds drawing with arrays

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		<li><a href="grid_rotate">loop 6: grid rotate</a></li>
 		<li><a href="interface">loop 7: user interface</a></li>
 		<li><a href="array">array 1: cat function</a></li>
+		<li><a href="array_drawing">array 2: drawing with points</a></li>
+		<li><a href="array_cat">array 3: cats array</a></li>
 	</ul>
 </body>
 </html>
