--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<li><a href="array">array 1: cat function</a></li>
 		<li><a href="array_drawing">array 2: drawing with points</a></li>
 		<li><a href="array_cat">array 3: cats array</a></li>
+		<li><a href="csv">data vis 1: loading a csv</a></li>
 	</ul>
 </body>
 </html>
