--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		<li><a href="array_drawing">array 2: drawing with points</a></li>
 		<li><a href="array_cat">array 3: cats array</a></li>
 		<li><a href="csv">data vis 1: loading a csv</a></li>
+		<li><a href="rookies">data vis 2: rookie assists</a></li>
+		<li><a href="rookies_min">data vis 3: rookie assists + minutes played</a></li>
 	</ul>
 </body>
 </html>
